--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h1><strong>Coming Soon</strong></h1>
           </header>
 
-          <img src="logo.jpg" alt="Classic Cut Logo" width="500" height="600">
+          <img src="logo.jpg" alt="Classic Cut Logo" class="rounded mx-auto d-block" width="500" height="600">
           
           <section class="text-center col-12">
             <div class='buffer col-12'>
