--- a/index.html
+++ b/index.html
@@ -45,51 +45,20 @@
 
   </div>
 
+  <div class="contact-container">
 
-<div class="contact1">
-  <div class="container-contact1">
-    <div class="contact1-pic js-tilt" data-tilt>
-      <img src="images/img-01.png" alt="IMG">
-    </div>
+    <form>
+      <label for="fname">First name:</label><br>
+      <input type="text" id="fname" name="fname"><br>
+      <label for="lname">Last name:</label><br>
+      <input type="text" id="lname" name="lname">
+    </form> 
 
-    <form class="contact1-form validate-form">
-      <span class="contact1-form-title">
-        Get in touch
-      </span>
-
-      <div class="wrap-input1 validate-input" data-validate = "Name is required">
-        <input class="input1" type="text" name="name" placeholder="Name">
-        <span class="shadow-input1"></span>
-      </div>
-
-      <div class="wrap-input1 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-        <input class="input1" type="text" name="email" placeholder="Email">
-        <span class="shadow-input1"></span>
-      </div>
-
-      <div class="wrap-input1 validate-input" data-validate = "Subject is required">
-        <input class="input1" type="text" name="subject" placeholder="Subject">
-        <span class="shadow-input1"></span>
-      </div>
-
-      <div class="wrap-input1 validate-input" data-validate = "Message is required">
-        <textarea class="input1" name="message" placeholder="Message"></textarea>
-        <span class="shadow-input1"></span>
-      </div>
-
-      <div class="container-contact1-form-btn">
-        <button class="contact1-form-btn">
-          <span>
-            Submit
-            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-          </span>
-        </button>
-      </div>
-    </form>
   </div>
+
 </div>
   <footer class="zone yellow">made by z => m</footer>
 </div>
-<script src="js/main.js"></script>
+
 </body>
 </html>
