--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     
 
 
-    <a id="contact">
-    <div class="contact-container">
+    <a class="contact">
+    <div class="contact-container ">
       <form action="post">
         <label for="fname">Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -76,7 +76,7 @@
   </a>
 
 </div>
-  <footer class="zone yellow">made by z => m</footer>
+  <footer class="zone yellow">Made by Julian 2021</footer>
 </div>
 
 </body>
