--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   $('#gform').on('submit', function(e){
     $('#gform *').fadeOut(2000);
     //replaces the contact us message with the following
-    $('#contact-title').replaceWith("Thank you for your message, we will get back to your shortly!").fadeIn(3000);
+    $('#contact-title').replaceWith("Thank you for your message, we will get back to you shortly!").fadeIn(3000);
   });
 
 </script>
