Changed some spelling mistakes

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 </div>-->
 <footer class="ph3 ph4-ns pv6 bt b--black-10 black-70 footer-lol">
   <a href="mailto:admin@classic-cut.com.au" class="link b b f3 f2-ns dim black-70 lh-solid email"><strong>EMAIL: admin@classic-cut.com.au</strong></a>
-  <p class="b f3 f2-ns black-70 lh-solid"><span class="email phone"><strong>PHONE: 02 3232223 ©</strong></p></span></span>
+  <p class="b f3 f2-ns black-70 lh-solid"><span class="email phone"><strong>PHONE: 02 3232223</strong></p></span></span>
   <p class="f7 db b ttu lh-solid"><span class="email"><strong>© Designed by Julian 2021</p></strong></span>
   
 </footer>
