Added home link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
   <nav class=" green">
     <ul class="main-nav no-icon">
-        <li><a class ="link dim" href="#"><img src="./img/mini-logo.png" alt="Classic-Cut Logo" width="145.7" height="100" ></a></li>
+        <li><a class ="link dim" href="/index.html"><img src="./img/mini-logo.png" alt="Classic-Cut Logo" width="145.7" height="100" ></a></li>
         <li><a class="nav-text  link" href="#what-we-do">What We Do</a></li>
         <li><a class="nav-text  link" href="#about-us">Who We Are</strong></a></li>
         
