--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   
   </div>
   <a id="what-we-do"> 
-    <h1 class="txt-title"><strong>What We Do</strong></h1><br>
+    <h1 class="txt-title"><strong class="titles">What We Do</strong></h1><br>
   <div class=" blue  grid-wrapper ">
    
     <div class="box zone demo box-text">
@@ -119,7 +119,7 @@
 
   </div>
   <a id="about-us">
-    <h1 class="txt-title"><strong>Who We Are</strong></h1><br>
+    <h1 class="txt-title"><strong class="titles">Who We Are</strong></h1><br>
   <div class="container about-us">
     
     
@@ -130,7 +130,7 @@
 
 <!-- GOOGLE FORM THAT CONNECTS TO CONTACT PAGE, ALLOWING CONTACT FORM ON STATIC WEBPAGE-->
     <a id="contact">
-      <h1 class="txt-title"><strong>Get In Touch</strong></h1><br>
+      <h1 class="txt-title"><strong class="titles">Get In Touch</strong></h1><br>
       <div class="container1">
         <h2 id="contact-title">Leave us a message about your next project and we will get back to you shortly.</h2>
         <form id ="gform" name ="gform" target="hidden_iframe" onsubmit="submitted=true;"
