Removed some inconsistent grammar

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
       <ul class="cool-icon">
         <li>Renovation of new and old buildings</li>
         <li>Saw cut new windows and door openings in brick and concrete</li>
-        <li>Change existing plumbing and electrical pipe and cabling routes in concrete, brick, walls and floors.</li>
+        <li>Change existing plumbing and electrical pipe and cabling routes in concrete, brick, walls and floors</li>
       </ul>
     
       </div>
     <div class="box zone service box-text">
       <h2>Service works</h2>
       <ul class="cool-icon">
-        <li>Saw cut trenches and manholes for laying of pipes and cabling for gas utilities, Water utilities, Power utilities and Telecom utilities.</li>
+        <li>Saw cut trenches and manholes for laying of pipes and cabling for gas utilities, Water utilities, Power utilities and Telecom utilities</li>
         
       </ul>
     </div>
