--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </nav>
   <div class="container red">
     <img src="./img/main-transparent-high.png " class="main-img" alt="Classic-Cut Logo" width="600" height="280" ><br>
-    <h1 class="text-center col-12 title-text blurb"><strong>Locally owned and operated with over 30 years experience.</strong></h1>
+    <h1 class="text-center col-12 title-text blurb"><strong>Your concrete specialists. Locally owned and operated with over 30 years experience.</strong></h1>
   </div>
     
   
@@ -192,6 +192,7 @@
 <footer class="ph3 ph4-ns pv6 bt b--black-10 black-70 footer-lol">
   <a href="mailto:admin@classic-cut.com.au" class="link b b f3 f2-ns dim black-70 lh-solid email"><strong>EMAIL: admin@classic-cut.com.au</strong></a>
   <p class="b f3 f2-ns black-70 lh-solid"><span class="email phone"><strong>PHONE: 03 9773 9905</strong></p></span></span>
+  <p class="b f3 f2-ns black-70 lh-solid"><span class="email phone"><strong>LOCATED IN MELBOURNE, VICTORIA, AUSTRALIA</strong></p></span></span>
   <p class="f7 db b ttu lh-solid"><span class="email"><strong>© Designed by Julian 2021</p></strong></span>
   
 </footer>
